# advent-of-code

./: .gitignore  CMakeLists.txt
2024/day01/: CMakeLists.txt  main  main.cpp
2024/day02/: CMakeLists.txt  Makefile  main.cpp  output.txt
2024/day03/: CMakeLists.txt  Makefile  main.cpp
2024/day04/: main.cpp
